--- a/user-favorite-site-service/build.gradle
+++ b/user-favorite-site-service/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
     compileOnly group: "org.osgi", name:"org.osgi.core", version:"6.0.0"
 
-    compileOnly project(":modules:navigation:user-favorite-site:user-favorite-site-api")
+    compileOnly project(":modules:user-favorite-site:user-favorite-site-api")
 }
 
 buildService {
